--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,14 +14,30 @@ theme:
   language: "zh"
   logo: assets/MIKASA.png
   favicon: assets/MIKASA.png
+  icon:
+    previous: fontawesome/solid/angle-left  # 上一页图标
+    next: fontawesome/solid/angle-right  # 下一页图标
+    repo: fontawesome/brands/github  # GitHub仓库图标
+    view: material/eye  # 查看图标
   features:
+    - content.code.copy
     - content.code.annotate
     - content.action.edit
+    - content.tabs.link
+    - navigation.instant
     - navigation.tracking
     - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.path
+    - navigation.indexes
     - navigation.top
     - navigation.footer
     - navigation.sections
+    - search.highlight
+    - search.share
+    - search.suggest
+    - header.autohide
+  font: false
   palette: 
 
     # Palette toggle for light mode
@@ -37,6 +53,7 @@ theme:
         name: Switch to light mode
 
 markdown_extensions:
+  - md_in_html
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
@@ -59,3 +76,11 @@ markdown_extensions:
       generic: true
   - admonition
   - pymdownx.details
+
+extra_css:  # 额外CSS文件设置
+    - https://gcore.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css  # KaTeX样式文件
+    - css/custom.css  # 自定义CSS文件
+    - css/neoteroi-mkdocs.css  # 另一个自定义CSS文件
+    - https://cdn.tonycrane.cc/utils/katex.min.css  # 另一个KaTeX样式文件
+    - https://cdn.tonycrane.cc/jbmono/jetbrainsmono.css  # JetBrains Mono字体样式
+    - https://cdn.tonycrane.cc/lxgw/lxgwscreen.css  # LXGW字体样式
