--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,9 @@ repo_url: https://github.com/Akane-6730/blog
 
 
 nav:
-  - Home: index.md  
+  - Home: 
+      - Home: index.md  
+      - About: about.md
   - Notes:
       - 编程语言:
           - C:
@@ -89,3 +91,8 @@ extra_css:  # 额外CSS文件设置
     - https://cdn.tonycrane.cc/utils/katex.min.css  # 另一个KaTeX样式文件
     - https://cdn.tonycrane.cc/jbmono/jetbrainsmono.css  # JetBrains Mono字体样式
     - https://cdn.tonycrane.cc/lxgw/lxgwscreen.css  # LXGW字体样式
+
+extra_javascript:
+  - javascripts/katex.js 
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js  
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
