--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,13 +28,13 @@ nav:
               # - CS/编程语言/C/一些常犯的小错误.md
               # - CS/编程语言/C/输入.md
 
-  - Math:
-      - Calculus:
-          - Math/calculus/解题方法思路整理.md
-          - Math/calculus/定理证明思路.md
-      - Linear Algebra:
-          - Math/Linear Algebra/思路.md
-          - Math\Linear Algebra\01-04 正交(Orthogonality).md
+  # - Math:
+  #     - Calculus:
+  #         - Math/calculus/解题方法思路整理.md
+  #         - Math/calculus/定理证明思路.md
+  #     - Linear Algebra:
+  #         - Math/Linear Algebra/思路.md
+  #         - Math\Linear Algebra\01-04 正交(Orthogonality).md
 
   - Language:
       - English:
@@ -43,7 +43,7 @@ nav:
               - ICⅡ: Language/English/大英Ⅲ/ICⅡ.md
               
   - CTF:
-      - CTF/Crypto/My CTF competition history.md
+      # - CTF/Crypto/My CTF competition history.md
       - Crypto:
           - CTF/Crypto/Introduction to CryptoHack.md
 
@@ -95,7 +95,7 @@ markdown_extensions:
   #This configuration adds the ability to align images, add captions to images (rendering them as figures), and mark large images for lazy-loading.
   - attr_list     
   - md_in_html  
-  - pymdownx.blocks.caption
+  # - pymdownx.blocks.caption
 
   - pymdownx.superfences:
       custom_fences:
@@ -124,31 +124,39 @@ markdown_extensions:
   - pymdownx.details
 
 extra_css:  # 额外CSS文件设置
-  - https://unpkg.com/katex@0/dist/katex.min.css  # KaTeX样式文件
-  - css/custom.css  # 自定义CSS文件
-  - css/neoteroi-mkdocs.css  # 另一个自定义CSS文件
-  - css/custom-carousel.css
-  - css/counter.css
-  - https://cdn.tonycrane.cc/utils/katex.min.css  # 另一个KaTeX样式文件
-  - https://cdn.tonycrane.cc/jbmono/jetbrainsmono.css  # JetBrains Mono字体样式
-  - https://cdn.tonycrane.cc/lxgw/lxgwscreen.css  # LXGW字体样式
-  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.11/katex.min.css
+  # - https://unpkg.com/katex@0/dist/katex.min.css  # KaTeX样式文件
+  # - css/custom.css  # 自定义CSS文件
+  # - css/neoteroi-mkdocs.css  # 另一个自定义CSS文件
+  # - css/custom-carousel.css
+  # - css/counter.css
+  # - https://cdn.tonycrane.cc/utils/katex.min.css  # 另一个KaTeX样式文件
+  # - https://cdn.tonycrane.cc/jbmono/jetbrainsmono.css  # JetBrains Mono字体样式
+  # - https://cdn.tonycrane.cc/lxgw/lxgwscreen.css  # LXGW字体样式
+  # - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.13.11/katex.min.css
+  - https://cdn.tonycrane.cc/utils/katex.min.css
+  - https://cdn.tonycrane.cc/jbmono/jetbrainsmono.css
+  - https://cdn.tonycrane.cc/lxgw/lxgwscreen.css
+  - css/custom.css
+
 
 extra_javascript:
-  - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS_HTML
+  # - https://gcore.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js
+  - https://cdn.tonycrane.cc/utils/katex.min.js
+  - js/katex.js
+  # - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS_HTML
 
-  - javascripts/mathjax.js  # MathJax
-  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+  # - javascripts/mathjax.js  # MathJax
+  # - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
-  - javascripts/katex.js  # KaTeX
-  - https://unpkg.com/katex@0/dist/katex.min.js
-  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
+  # - javascripts/katex.js  # KaTeX
+  # - https://unpkg.com/katex@0/dist/katex.min.js
+  # - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
 
-  - https://polyfill.io/v3/polyfill.min.js?features=es6   # Latex支持
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js   # Latex支持
+  # - https://polyfill.io/v3/polyfill.min.js?features=es6   # Latex支持
+  # - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js   # Latex支持
 
-plugins:
-  - glightbox
+# plugins:
+#   - glightbox
 
   # - search
   # - pymdownx.arithmatex:
